2010-10-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c:
	[ 3095884 ] Indication classes missing SystemName

2010-10-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* constClass.c:
	[ 3086143 ] set cmpi status in getPropQualifier
	(patch by Janny Au)
	
	* datetime.c:
	[ 3086145 ] check datetime format in chars2bin
	(patch by Janny Au)

2010-08-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* predicate.c:
	Pulled out 3051707 patch for the time being

	* interopProvider.c:
	[ 3053240 ] Leak on indication delivery

2010-08-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* predicate.c:
	[ 3051707 ] Leak in predicate.c

2010-08-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am:
	[ 3049645 ] SLP hostname lib won't build

	* objectImpl.c:
	[ 3035165 ] objectSize in objectImpl.c is not used thread safe
	(patch by Till Steinbach)

2010-08-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	*  cimXmlRequest.c test/TestProviders/cmpiTestMethodProvider.c,
		test/schema/root/cimv2/Test_Method.mof 
	[ 3048960 ] method array types not filled in

2010-08-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.sh.pre.in:
	[ 3048944 ] Bump downloaded CIM schema to 2.26

2010-07-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3026606 ] Prov idle unload may not call all cleanup functions

2010-07-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c, providerDrv.c, providerRegister.h
	[ 3012365 ] enableIndications() only called once per provider group
	(patch by Tim Potter)

2010-07-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* interopProvider.c
	[ 3003509 ] sfcb must configure IndicationFilterName 
	(based on patch by sto)

2010-07-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3010272 ] Indication providers always unloaded when idle

2010-07-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c: