@@ -5,6 +5,7 @@ Bugs fixed:
 - 3086143 set cmpi status in getPropQualifier
 - 3086145 check datetime format in chars2bin
 - 3095884 Indication classes missing SystemName
+- 3101155 Failed to load provider libraries due to symbol conflicts
 
 Changes in 1.3.9
 ================
